--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>Meghalaya Private University Regulatory Board (MPURB)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="referrer" content="strict-origin-when-cross-origin">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.jsdelivr.net/; style-src 'self' https://fonts.googleapis.com https://cdn.jsdelivr.net/; font-src https://fonts.gstatic.com; img-src 'self' https://cdn.jsdelivr.net/ data:; object-src 'none'; base-uri 'self'; frame-ancestors 'none';">  
+    <meta name="referrer" content="strict-origin-when-cross-origin">  
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -251,7 +250,7 @@
         </div>
         
         <div class="footer-bottom">
-            <a href="javascript:void(0)" class="back-top">Back to top ↑</a>
+            <a href="#" class="back-top">Back to top ↑</a>
         </div>
         </div>
     </footer>
