unsafe-hashes to style-src

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="referrer" content="strict-origin-when-cross-origin">  
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" sha256-XK5b7F8xN8Vvl3n9X5sZt+8m1vXQh7yZ2+9j3k1l0="">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
