--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Meghalaya Private University Regulatory Board (MPURB)</title>
+    <title>Meghalaya Private Universities Regulatory Board (MPURB)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,17 +41,18 @@
 
             <nav>
                 <ul>
-                    <li><a class="text-nowrap" href="#about">About</a></li>
+                    <li><a class="text-nowrap" href="#/">Home</a></li>
+                    <li><a class="text-nowrap" href="#about-page">About</a></li>
                     <li><a class="text-nowrap" href="#main-content">Vision & Mission</a></li>
                     <li><a class="text-nowrap" href="#structure">Structure</a></li>
                     <li><a class="text-nowrap" href="#regulations">Regulations</a></li>
                     <li><a class="text-nowrap" href="#universities">Universities</a></li>
                     <li><a class="text-nowrap btn-nav" href="#contact">Contact</a></li>
                     <li><a class="text-nowrap btn-nav-log" href="login.html">Portal Login</a></li>
+                    <li><a href="#main-content" class="text-nowrap skipTo">↓ Skip to main content</a></li>
                 </ul>
             </nav>
         </div>
-        <a href="#main-content" class="skipTo"><small class="text-secondary">↓ Skip to main content</small></a>
     </header>
 
     <main>
@@ -59,20 +60,87 @@
             <div class="container hero-grid">
                 <div class="hero-content">
                     <span class="badge-hero">Est. by Act of State Legislature</span>
-                    <h2>Meghalaya Private University Regulatory Board</h2>
+                    <h2>Meghalaya Private Universities Regulatory Board</h2>
                     <p class="about-content">
-                        The Meghalaya Private University Regulatory Board (MPURB) is constituted
+                        The Meghalaya Private Universities Regulatory Board (MPURB) is constituted
                         by the State Government to regulate, monitor, and ensure quality standards
-                        in Private Universities across Meghalaya. <a href="#" id="openAboutModal" class="text-link">Read
+                        in Private Universities across Meghalaya. <a href="#about-page" class="text-link">Read
                             more</a>
                     </p>
 
-                    <div class="hero-actions">
+                    <!-- <div class="hero-actions">
                         <a href="#universities" class="btn-secondary shadow-sm">Recognized Universities</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
+
+        <section id="about-page" class="container section-pad hidden-section">
+            <a href=""></a>
+            <div class="section-header">
+                <h3>About MPURB</h3>
+            </div>
+            <div class="card">
+                <p>
+                        The State Government shall constitute a Regulatory Board consisting of a
+                        Chairman and three Members nominated from among eminent educationists
+                        and experienced administrators.
+                    </p>
+
+                    <p>
+                        The Board shall undertake the following responsibilities:
+                    </p>
+
+                    <ol class="modal-list" type="a">
+
+                        <li>To periodically inspect all Private Universities which have been set up in Meghalaya
+                            including study centre etc.</li>
+
+                        <li>(b) to requisition any specific information from the institutions indicated at (a) above
+                        </li>
+
+                        <li>To call for reports from Directorate of Higher and Technical Education or directly from the
+                            Registrar of the concerned University hich may be of academic nature and otherwise</li>
+
+                        <li>To ensure that quality education is imparted by these institutions as per the guidelines of
+                            the UGC or any Statutory Body /Regulatory Body under the control of Government</li>
+
+                        <li>Maintenance of permanent headquarters at Shillong.</li>
+
+                        <li>Regulation of honorarium and allowances of members.</li>
+
+                        <li>Submission of Annual Reports with recommendations.</li>
+
+                        <li>Reporting major institutional developments to Government.</li>
+
+                        <li>The Regulatory Board shall have a permanent office with adequate staff with Headquarters at
+                            Shillong:</li>
+
+                        <li>The members shall be entitled to such Honorarium, travelling allowances and daily allowances
+                            as shall be prescribed separately</li>
+
+                        <li>The Regulatory Board shall submit Annual Reports in respect of the Private Universities
+                            including those Universities having off campus centre/study centre/regional centre etc.
+                            functioning in the State. Such reports shall make specific recommendations for action/s to
+                            be taken by the Government including imposition of penalty as provided for any violation of
+                            relevant provisions laid down by Government; and</li>
+
+                        <li>The Board shall bring any important development in respect of any Private University as it
+                            arises, to the notice of the Government.</li>
+
+                    </ol>
+
+                    <p>
+                        According to the decision relating to working of Private Universities as per Ordinance 7 of 2025
+                        held on 17th September 2025 decided to
+                        create a Meghalaya Common Admission Portal for all Colleges/State university including Private
+                        Universities to be developed by NIC, Meghalaya
+                    </p>
+
+            </div>
+
+        </section>
+
 
         <section id="main-content" class="container section-pad">
             <div class="section-header">
@@ -80,40 +148,55 @@
             </div>
             <div class="vm-card">
                 <p class="vision">
-                    “The Object to regulate the Standard of Private Universities
+                    “The Object to regulate the Standards of Private Universities
                     established by the Act of the State Legislature of Meghalaya.”
                 </p>
             </div>
         </section>
 
         <section id="structure" class="section-pad bg-light">
+
             <div class="container">
+
                 <div class="section-header">
-                    <h3>Organizational Structure</h3>
+                <h3>Organizational Structure</h3>
                 </div>
-                <div class="grid-3">
-                    <div class="card structure-card">
-                        <h4>Chairman</h4>
-                        <p class="role-desc">Nominated by State Government</p>
+
+                <div class="org-chart">
+
+                <div class="org-node chairman">
+                    <h4>Chairman</h4>
+                    <p>Mr. L.M. Sangma</p>
+                    <small>Former Law Secretary, Govt. of Meghalaya &</small>
+                    <small>Former Chairman MPSC</small>
+                </div>
+
+                <div class="org-row">
+
+                    <div class="org-node">
+                    <h4>Member</h4>
+                    <p>Mr. S. Bhattacharjee</p>
+                    <small>Retired Addl. Director Higher and Technical Education Meghalaya</small>
                     </div>
 
-                    <div class="card structure-card">
-                        <h4>Members (2)</h4>
-                        <p class="role-desc">Eminent Educationists / Administrators</p>
+                    <div class="org-node">
+                    <h4>Member</h4>
+                    <p>Dr. Catherine A. R. Diengdoh</p>
+                    <small>Retired Director College Development Council, NEHU</small>
                     </div>
 
-                    <div class="card structure-card">
-                        <h4>Permanent Office</h4>
-                        <p class="role-desc">Headquarters at Shillong</p>
-                    </div>
                 </div>
+
+                </div>
+
             </div>
+
         </section>
+
 
         <section id="regulations" class="container section-pad">
             <div class="section-header">
                 <h3>Acts & Regulations</h3>
-                <p>Statutory Framework and Guidelines issued by MPURB</p>
             </div>
 
             <div class="grid-3">
@@ -122,22 +205,10 @@
                         <img src="assets/icons/bootstrap-icons/balance_color.png" class="icon" alt="scale icon">
                     </div>
                     <div class="doc-content">
-                        <h4>State Acts & Rules</h4>
+                        <h4>State Acts</h4>
                         <p>Rules and Regulations framed by the Government of Meghalaya (Education Dept) regarding
                             Private Universities.</p>
-                        <a href="#" class="text-link">View Guidelines &rarr;</a>
-                    </div>
-                </div>
-
-                <div class="card doc-card">
-                    <div class="doc-icon">
-                        <img src="assets/icons/bootstrap-icons/ancient-scroll.png" class="icon" alt="scroll icon">
-                    </div>
-                    <div class="doc-content">
-                        <h4>Ordinance 7 of 2025</h4>
-                        <p>Directives regarding the working of Private Universities and the mandatory creation of the
-                            "Meghalaya Command Admission Portal"[cite: 15].</p>
-                        <a href="#" class="text-link">Read Ordinance &rarr;</a>
+                        <a href="https://megeducation.gov.in/dhte/acts/MPUREMS%20Act%202019.pdf" class="text-link">View Act &rarr;</a>
                     </div>
                 </div>
 
@@ -149,7 +220,7 @@
                     <div class="doc-content">
                         <h4>UGC Framework</h4>
                         <p>Compliance with standards regarding quality education as imparted by the UGC or Statutory
-                            Bodies[cite: 7].</p>
+                            Bodies.</p>
                         <a href="https://www.ugc.ac.in/" target="_blank" class="text-link"
                             rel="noopener noreferrer">Visit UGC &rarr;</a>
                     </div>
@@ -158,11 +229,13 @@
         </section>
 
         <section class="container section-pad">
+            <div class="section-header">
+                <h3>Recognized Universities</h3>
+            </div>
             <div class="grid-sidebar">
 
                 <div id="universities" class="main-col">
                     <div class="header-row">
-                        <h3>Recognized Universities</h3>
                         <span class="status-indicator">Updated 2026</span>
                     </div>
 
@@ -184,34 +257,6 @@
                     </div>
                 </div>
 
-                <aside id="notifications" class="sidebar-col">
-                    <div class="card notification-card">
-                        <div class="notif-header">
-                            <h3><img src="assets/icons/bootstrap-icons/bell-fill.svg" class="icon-small"
-                                    alt="bell icon">&nbsp;Notifications</h3>
-                        </div>
-                        <ul class="notif-list">
-                            <li class="important-update">
-                                <span class="date">Sept 17, 2025</span>
-                                <a href="#">
-                                    <strong>New Portal Launch:</strong> Decision to create the "Meghalaya Command
-                                    Admission Portal" for all Colleges & Universities (developed by NIC).
-                                </a>
-                            </li>
-
-                            <li>
-                                <span class="date">Jan 12, 2026</span>
-                                <a href="#">Submission of DPR for MPURB - Phase I</a>
-                            </li>
-
-                            <li>
-                                <span class="date">General</span>
-                                <a href="#">Guidelines issued under relevant State Acts</a>
-                            </li>
-                        </ul>
-                    </div>
-                </aside>
-
             </div>
         </section>
 
@@ -221,7 +266,7 @@
 
                     <div class="footer-brand">
                         <h4>MPURB</h4>
-                        <p>Meghalaya Private University Regulatory Board</p>
+                        <p>Meghalaya Private Universities Regulatory Board</p>
                         <p class="copyright">© 2026 Government of Meghalaya</p>
                     </div>
 
@@ -233,8 +278,8 @@
                             Near Shillong Public School,<br>
                             Shillong, Meghalaya - 793003
                         </p>
-                        <p><strong>📧 Email:</strong> mpurb-meg@gov.in</p>
-                        <p><strong>📞 Phone:</strong> +91-986-325-XXXX</p>
+                        <p><strong>📧 Email:</strong> mpurbshillong@gmail.com</p>
+                        <p><strong>📞 Phone:</strong> +91 986325XXXX</p>
                     </div>
 
                 </div>
@@ -246,7 +291,7 @@
         </footer>
 
         <!-- About Modal -->
-        <div id="aboutModal" class="modal-overlay">
+        <!-- <div id="aboutModal" class="modal-overlay">
 
             <div class="modal-box">
 
@@ -309,7 +354,7 @@
                     <p>
                         According to the decision relating to working of Private Universities as per Ordinance 7 of 2025
                         held on 17th September 2025 decided to
-                        create a Meghalaya Command Admission Portal for all Colleges/State university including Private
+                        create a Meghalaya Common Admission Portal for all Colleges/State university including Private
                         Universities to be developed by NIC, Meghalaya
                     </p>
 
@@ -317,7 +362,7 @@
 
             </div>
 
-        </div>
+        </div> -->
 
 
         <script src="js/universities.js"></script>
