--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
+    <meta http-equiv="Content-Security-Policy" content=" ">
+
     <script src="https://cdn.ux4g.gov.in/accessibility-beta-v1.15/accessibility-widget.js" defer>
     </script>
 
@@ -39,7 +41,7 @@
                 <span></span>
             </label>
 
-            <nav>
+            <nav aria-label="Main Navigation">
                 <ul>
                     <li><a class="text-nowrap" href="#/">Home</a></li>
                     <li><a class="text-nowrap" href="#about-page">About</a></li>
@@ -267,7 +269,9 @@
                     <div class="footer-brand">
                         <h4>MPURB</h4>
                         <p>Meghalaya Private Universities Regulatory Board</p>
+                        <p>Designed & Developed by National Informatics Centre, Meghalaya State Centre</p>
                         <p class="copyright">© 2026 Government of Meghalaya</p>
+                        <p>Last Updated: 06 Feb 2026</p>
                     </div>
 
                     <div class="footer-contact">
@@ -289,81 +293,6 @@
                 </div>
             </div>
         </footer>
-
-        <!-- About Modal -->
-        <!-- <div id="aboutModal" class="modal-overlay">
-
-            <div class="modal-box">
-
-                <div class="modal-header">
-                    <h3>About MPURB</h3>
-                    <button class="modal-close" id="closeAboutModal">&times;</button>
-                </div>
-
-                <div class="modal-body">
-
-                    <p>
-                        The State Government shall constitute a Regulatory Board consisting of a
-                        Chairman and three Members nominated from among eminent educationists
-                        and experienced administrators.
-                    </p>
-
-                    <p>
-                        The Board shall undertake the following responsibilities:
-                    </p>
-
-                    <ol class="modal-list" type="a">
-
-                        <li>To periodically inspect all Private Universities which have been set up in Meghalaya
-                            including study centre etc.</li>
-
-                        <li>(b) to requisition any specific information from the institutions indicated at (a) above
-                        </li>
-
-                        <li>To call for reports from Directorate of Higher and Technical Education or directly from the
-                            Registrar of the concerned University hich may be of academic nature and otherwise</li>
-
-                        <li>To ensure that quality education is imparted by these institutions as per the guidelines of
-                            the UGC or any Statutory Body /Regulatory Body under the control of Government</li>
-
-                        <li>Maintenance of permanent headquarters at Shillong.</li>
-
-                        <li>Regulation of honorarium and allowances of members.</li>
-
-                        <li>Submission of Annual Reports with recommendations.</li>
-
-                        <li>Reporting major institutional developments to Government.</li>
-
-                        <li>The Regulatory Board shall have a permanent office with adequate staff with Headquarters at
-                            Shillong:</li>
-
-                        <li>The members shall be entitled to such Honorarium, travelling allowances and daily allowances
-                            as shall be prescribed separately</li>
-
-                        <li>The Regulatory Board shall submit Annual Reports in respect of the Private Universities
-                            including those Universities having off campus centre/study centre/regional centre etc.
-                            functioning in the State. Such reports shall make specific recommendations for action/s to
-                            be taken by the Government including imposition of penalty as provided for any violation of
-                            relevant provisions laid down by Government; and</li>
-
-                        <li>The Board shall bring any important development in respect of any Private University as it
-                            arises, to the notice of the Government.</li>
-
-                    </ol>
-
-                    <p>
-                        According to the decision relating to working of Private Universities as per Ordinance 7 of 2025
-                        held on 17th September 2025 decided to
-                        create a Meghalaya Common Admission Portal for all Colleges/State university including Private
-                        Universities to be developed by NIC, Meghalaya
-                    </p>
-
-                </div>
-
-            </div>
-
-        </div> -->
-
 
         <script src="js/universities.js"></script>
 
