--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                     <div class="footer-brand">
                         <h4>MPURB</h4>
                         <p>Meghalaya Private Universities Regulatory Board</p>
-                        <p>Designed & Developed by National Informatics Centre, Meghalaya State Centre</p>
+                        <p>Designed & Developed by National Informatics Centre, MLSC</p>
                         <p class="copyright">© 2026 Government of Meghalaya</p>
                         <p>Last Updated: 06 Feb 2026</p>
                     </div>
