--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             </div>
             <div class="vm-card">
                 <p class="vision">
-                    “The Object to regulate the Standards of Private Universities
+                    “To regulate the Standards of Private Universities
                     established by the Act of the State Legislature of Meghalaya.”
                 </p>
             </div>
@@ -283,7 +283,7 @@
                             Shillong, Meghalaya - 793003
                         </p>
                         <p><strong>📧 Email:</strong> mpurbshillong@gmail.com</p>
-                        <p><strong>📞 Phone:</strong> +91 986325XXXX</p>
+                        <p><strong>📞 Phone:</strong> +91 7628962246</p>
                     </div>
 
                 </div>
