--- a/login.html
+++ b/login.html
@@ -20,13 +20,9 @@
     </div>
     
     <h1>Under Development</h1>
-    
-    <p class="sub-text">
-      The <strong>Meghalaya Private University Board Portal</strong> is currently being developed by NIC Meghalaya.
-    </p>
 
     <div class="info-box">
-      <strong>Note:</strong> This portal is being created as per the decision relating to Ordinance 7 of 2025.
+      <strong>Note:</strong>The <strong>Meghalaya Private University Board Portal</strong> is currently being developed by NIC Meghalaya.
     </div>
 
     <a href="index.html" class="btn-back">
