--- a/index.html
+++ b/index.html
@@ -84,59 +84,28 @@
             </div>
             <div class="card">
                 <p>
-                        The State Government shall constitute a Regulatory Board consisting of a
-                        Chairman and three Members nominated from among eminent educationists
-                        and experienced administrators.
-                    </p>
-
-                    <p>
-                        The Board shall undertake the following responsibilities:
+                    1. The State Government shall constitute a Regulatory Board consisting of Chairman and three members to be nominated by the
+                     State Government from eminent educationists of repute or eminent persons with the vast administrative experience to be
+                     specified under the rules. The terms of reference of the Board shall be as follows 
                     </p>
 
                     <ol class="modal-list" type="a">
 
-                        <li>To periodically inspect all Private Universities which have been set up in Meghalaya
-                            including study centre etc.</li>
-
-                        <li>(b) to requisition any specific information from the institutions indicated at (a) above
-                        </li>
-
-                        <li>To call for reports from Directorate of Higher and Technical Education or directly from the
-                            Registrar of the concerned University hich may be of academic nature and otherwise</li>
-
-                        <li>To ensure that quality education is imparted by these institutions as per the guidelines of
-                            the UGC or any Statutory Body /Regulatory Body under the control of Government</li>
-
-                        <li>Maintenance of permanent headquarters at Shillong.</li>
-
-                        <li>Regulation of honorarium and allowances of members.</li>
-
-                        <li>Submission of Annual Reports with recommendations.</li>
-
-                        <li>Reporting major institutional developments to Government.</li>
-
-                        <li>The Regulatory Board shall have a permanent office with adequate staff with Headquarters at
-                            Shillong:</li>
-
-                        <li>The members shall be entitled to such Honorarium, travelling allowances and daily allowances
-                            as shall be prescribed separately</li>
-
-                        <li>The Regulatory Board shall submit Annual Reports in respect of the Private Universities
-                            including those Universities having off campus centre/study centre/regional centre etc.
-                            functioning in the State. Such reports shall make specific recommendations for action/s to
-                            be taken by the Government including imposition of penalty as provided for any violation of
-                            relevant provisions laid down by Government; and</li>
-
-                        <li>The Board shall bring any important development in respect of any Private University as it
-                            arises, to the notice of the Government.</li>
+                        <li>To periodically inspect all Private Universities which have been set up in Meghalaya including study centre etc.;</li>
+                        <li>To requisition any specific information from the institutions indicated at (a) above;</li>
+                        <li>To call for reports from Directorate of Higher and Technical Education or directly from the Registrar of the concerned University which may be of academic nature and otherwise;</li>
+                        <li>To ensure that quality education is imparted by these institutions as per the guidelines of the UGC or any Statutory Body /Regulatory Body under the control of Government;</li>
+                        <li>The Regulatory Board shall have a permanent office with adequate staff with Headquarters at Shillong;</li>
+                        <li>The members shall be entitled to such Honorarium, travelling allowances and daily allowances as shall be prescribed separately;</li>
+                        <li>The Regulatory Board shall submit Annual Reports in respect of the Private Universities including those Universities having off campus centre/study centre/regional centre etc. functioning in the State. Such reports shall make specific recommendations for action/s to be taken by the Government including imposition of penalty as provided for any violation of relevant provisions laid down by Government; 
+                        <li>The Board shall bring any important development in respect of any Private University as it arises, to the notice of the Government.
 
                     </ol>
 
                     <p>
-                        According to the decision relating to working of Private Universities as per Ordinance 7 of 2025
-                        held on 17th September 2025 decided to
-                        create a Meghalaya Common Admission Portal for all Colleges/State university including Private
-                        Universities to be developed by NIC, Meghalaya
+                        2. According to the decision relating to working of Private Universities as per Ordinance 7 of 2025
+                        held on 17th September 2025 decided to create a Meghalaya Command Admission Portal for all Colleges/State University
+                         including Private Universities to be developed by NIC, Meghalaya.
                     </p>
 
             </div>
@@ -151,7 +120,7 @@
             <div class="vm-card">
                 <p class="vision">
                     “To regulate the Standards of Private Universities
-                    established by the Act of the State Legislature of Meghalaya.”
+                    established by the Acts of the State Legislature of Meghalaya.”
                 </p>
             </div>
         </section>
@@ -271,7 +240,7 @@
                         <p>Meghalaya Private Universities Regulatory Board</p>
                         <p>Designed & Developed by National Informatics Centre, MLSC</p>
                         <p class="copyright">© 2026 Government of Meghalaya</p>
-                        <p>Last Updated: 06 Feb 2026</p>
+                        <p>Last Updated: 09 Feb 2026</p>
                     </div>
 
                     <div class="footer-contact">
@@ -282,7 +251,7 @@
                             Near Shillong Public School,<br>
                             Shillong, Meghalaya - 793003
                         </p>
-                        <p><strong>📧 Email:</strong> mpurbshillong@gmail.com</p>
+                        <p><strong>📧 Email:</strong> mpurbshillong[at]gmail[dot]com</p>
                         <p><strong>📞 Phone:</strong> +91 7628962246</p>
                     </div>
 
