removed point number two of about

--- a/index.html
+++ b/index.html
@@ -84,13 +84,12 @@
             </div>
             <div class="card">
                 <p>
-                    1. The State Government shall constitute a Regulatory Board consisting of Chairman and three members to be nominated by the
+                    The State Government shall constitute a Regulatory Board consisting of Chairman and three members to be nominated by the
                      State Government from eminent educationists of repute or eminent persons with the vast administrative experience to be
                      specified under the rules. The terms of reference of the Board shall be as follows 
-                    </p>
+                </p>
 
                     <ol class="modal-list" type="a">
-
                         <li>To periodically inspect all Private Universities which have been set up in Meghalaya including study centre etc.;</li>
                         <li>To requisition any specific information from the institutions indicated at (a) above;</li>
                         <li>To call for reports from Directorate of Higher and Technical Education or directly from the Registrar of the concerned University which may be of academic nature and otherwise;</li>
@@ -99,14 +98,7 @@
                         <li>The members shall be entitled to such Honorarium, travelling allowances and daily allowances as shall be prescribed separately;</li>
                         <li>The Regulatory Board shall submit Annual Reports in respect of the Private Universities including those Universities having off campus centre/study centre/regional centre etc. functioning in the State. Such reports shall make specific recommendations for action/s to be taken by the Government including imposition of penalty as provided for any violation of relevant provisions laid down by Government; 
                         <li>The Board shall bring any important development in respect of any Private University as it arises, to the notice of the Government.
-
                     </ol>
-
-                    <p>
-                        2. According to the decision relating to working of Private Universities as per Ordinance 7 of 2025
-                        held on 17th September 2025 decided to create a Meghalaya Command Admission Portal for all Colleges/State University
-                         including Private Universities to be developed by NIC, Meghalaya.
-                    </p>
 
             </div>
 
