modified the header logo and text

--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@
             <div class="brand">
                 <!-- <div class="logo-circle"> -->
                 <span>
-                    <img src="assets/icons/bootstrap-icons/Edu_Banner-removebg-preview.png" alt="Education Department"
-                        height="50%" width="50%">
+                    <img src="assets/icons/bootstrap-icons/Emblem.png" alt="Education Department"
+                        height="75%" width="75%">
                 </span>
                 <!-- </div> -->
 
-                <!-- <div class="brand-text">
+                <div class="brand-text">
                     <h1>MPURB</h1>
+                    <p>Department of Education</p>
                     <p>Government of Meghalaya</p>
-                </div> -->
+                </div>
             </div>
 
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
@@ -43,7 +44,7 @@
 
             <nav aria-label="Main Navigation">
                 <ul>
-                    <li><a class="text-nowrap" href="#/">Home</a></li>
+                    <li><a class="text-nowrap" href="/#">Home</a></li>
                     <li><a class="text-nowrap" href="#about-page">About</a></li>
                     <li><a class="text-nowrap" href="#main-content">Vision & Mission</a></li>
                     <li><a class="text-nowrap" href="#structure">Structure</a></li>
