text nowrap for brand text

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
                 <div class="brand-text">
                     <h1>MPURB</h1>
-                    <p>Department of Education</p>
-                    <p>Government of Meghalaya</p>
+                    <p class="text-nowrap">Department of Education</p>
+                    <p class="text-nowrap">Government of Meghalaya</p>
                 </div>
             </div>
 
@@ -232,7 +232,7 @@
                         <p>Meghalaya Private Universities Regulatory Board</p>
                         <p>Designed & Developed by National Informatics Centre, MLSC</p>
                         <p class="copyright">© 2026 Government of Meghalaya</p>
-                        <p>Last Updated: 09 Feb 2026</p>
+                        <p>Last Updated: 11 Feb 2026</p>
                     </div>
 
                     <div class="footer-contact">
